fixed icecream images cutting off

--- a/src/Bonus/Icecream/Icecream.scss
+++ b/src/Bonus/Icecream/Icecream.scss
@@ -3,11 +3,10 @@
   column-gap: 0.3rem;
 
   .icecream-square {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 0.3rem;
     background-color: black;
     color: white;
     font-size: xx-large;
